fix body overflow

--- a/queries.css
+++ b/queries.css
@@ -4,7 +4,7 @@
 
 /* TABLETS (544PX) */
 @media (min-width: 34em) {
-  .section-testimonials {
+  .testimonials-container {
     grid-template-columns: 1fr 1fr;
   }
 
@@ -28,7 +28,7 @@
 
 /* LAPTOP (1024PX) */
 @media (min-width: 64em) {
-  .section-testimonials {
+  .testimonials-container {
     grid-template-columns: repeat(4, 1fr);
     grid-auto-flow: dense;
     column-gap: var(--space-400);
@@ -38,9 +38,6 @@
 
   .testimonial--blue {
     grid-column: span 2;
-  }
-
-  .testimonial--grey {
   }
 
   .testimonial--white.testimonial:nth-child(3) {
