--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
   font-family: "Barlow Semi Condensed", sans-serif;
   line-height: 1;
   background-color: var(--clr-bg);
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
   place-content: center;
@@ -61,6 +61,10 @@ body {
 
 /* TESTIMONIAL SECTION */
 .section-testimonials {
+  padding-inline: var(--space-400);
+}
+
+.testimonials-container {
   padding: var(--space-800) 0;
   display: grid;
   gap: var(--space-400);
@@ -177,5 +181,4 @@ body {
 .container {
   max-width: 111.4rem;
   margin: 0 auto;
-  padding-inline: var(--space-400);
 }
